@@ -38,7 +38,7 @@ When talking to the Splashy server you can use the following commands:
   allowchvt               Splashy ignores all "chvt" commands until this command is
                           sent
   chvt          <number>  Switch to vt <number>. See "allowchvt"
-  clrprint                Clears the text box area
+  clear                   Clears the text box area
   CLEAR                   Same as "clrprint". For compatibility with usplash
   exit                    Exits Splashy server
   getstring	<string>  Makes splashy prompt for a string. The first argument will
@@ -49,10 +49,10 @@ When talking to the Splashy server you can use the following commands:
                           between 0 and 100
   PROGRESS      <number>  Same as "progress". For compatibility with usplash
   print         <string>  Print <string> in the text box
-  print_scroll  <string>  Print <string> in the text box and scroll down
+  scroll        <string>  Print <string> in the text box and scroll down
   repaint                 Redraw the background image
   TEXT          <string>  Same as "print". For compatibility with usplash
-  TEXT_SCROLL   <string>  Same as "print_scroll"
+  SCROLL        <string>  Same as "print_scroll"
   timeout       <number>  Sets the amount of seconds splashy waits for new commands
                           in the fifo file. If that time is exceeded, it exits
   QUIT                    Same as "exit". For compatibility with usplash
