@@ -430,14 +430,14 @@ struct
         {
         .cmd = "TEXT",.handler = cmd_print,.args = 1,.specs = "s"}, 
         {
-        .cmd = "print_scroll",.handler = cmd_print_scroll,.args = 1,.specs = "s"},
+        .cmd = "scroll",.handler = cmd_print_scroll,.args = 1,.specs = "s"},
         {
-        .cmd = "TEXT_SCROLL",.handler = cmd_print_scroll,.args = 1,.specs = "s"},
+        .cmd = "SCROLL",.handler = cmd_print_scroll,.args = 1,.specs = "s"},
         {
         .cmd = "CLEAR",.handler = cmd_print_clear,.args =
                         0,.specs = NULL},
         {
-        .cmd = "clrprint",.handler = cmd_print_clear,.args =
+        .cmd = "clear",.handler = cmd_print_clear,.args =
                         0,.specs = NULL},
         {
         .cmd = "chvt",.handler = cmd_chvt,.args = 1,.specs = "d"},
